大幅减小编译WQSG_NDS生成exe的容量
git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@7 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/WQSG_NDS/WQSG_NDS/WQSG_NDS.vcproj
+++ b/WQSG_NDS/WQSG_NDS/WQSG_NDS.vcproj
@@ -124,6 +124,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="2"
+				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG"
 				MinimalRebuild="false"
