git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@21 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -83,6 +83,9 @@ EXSTYLE WS_EX_APPWINDOW
 CAPTION "Ps2MemoryCard"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
+    PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC,7,7,50,14
+    PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC,7,23,50,14
+    PUSHBUTTON      "µº»ÎPSU",IDC_BUTTON_IMPORT_PSU,58,7,50,14
 END
 
 
