--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
@@ -276,5 +276,9 @@
 		</File>
 	</Files>
 	<Globals>
+		<Global
+			Name="RESOURCE_FILE"
+			Value="Ps2MemoryCard.rc"
+		/>
 	</Globals>
 </VisualStudioProject>
