git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@23 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
@@ -221,6 +221,10 @@
 				RelativePath=".\VPscMc.cpp"
 				>
 			</File>
+			<File
+				RelativePath=".\VPscMc2.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Í·ÎÄ¼þ"
