git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@24 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -77,15 +77,17 @@ IDR_MAINFRAME           ICON                    "res\\Ps2MemoryCard.ico"
 // Dialog
 //
 
-IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 320, 200
+IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 351, 200
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Ps2MemoryCard"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC,7,7,50,14
-    PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC,7,23,50,14
-    PUSHBUTTON      "导入PSU",IDC_BUTTON_IMPORT_PSU,58,7,50,14
+    PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC,58,7,50,14
+    PUSHBUTTON      "导入PSU",IDC_BUTTON_IMPORT_PSU,241,7,50,14
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,337,167
+    PUSHBUTTON      "导出PSU",IDC_BUTTON_EXPORT_PSU,294,7,50,14
 END
 
 
@@ -139,7 +141,7 @@ BEGIN
     IDD_PS2MEMORYCARD_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 313
+        RIGHTMARGIN, 344
         TOPMARGIN, 7
         BOTTOMMARGIN, 193
     END
