--- a/WQSG 导出(导入)/IPS自解压GUI/IPS自解压GUI.vcproj
+++ b/WQSG 导出(导入)/IPS自解压GUI/IPS自解压GUI.vcproj
@@ -232,7 +232,7 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath="..\..\..\..\ICO\IconGood.ico"
+				RelativePath=".\IconGood.ico"
 				>
 			</File>
 			<File
