修正导出psu的bug
git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@36 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -89,6 +89,7 @@ BEGIN
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,337,167
     PUSHBUTTON      "导出PSU",IDC_BUTTON_EXPORT_PSU,190,7,50,14
     PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,294,7,50,14
+    PUSHBUTTON      "Button1",IDC_BUTTON1,273,7,11,9
 END
 
 
