--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -85,11 +85,12 @@ FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC,7,7,50,14
     PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC,58,7,50,14
-    PUSHBUTTON      "导入PSU",IDC_BUTTON_IMPORT_PSU,137,7,50,14
+    PUSHBUTTON      "导入PSU",IDC_BUTTON_IMPORT_PSU,168,7,50,14
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,26,337,167
-    PUSHBUTTON      "导出PSU",IDC_BUTTON_EXPORT_PSU,190,7,50,14
+    PUSHBUTTON      "导出PSU",IDC_BUTTON_EXPORT_PSU,221,7,50,14
     PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,294,7,50,14
     PUSHBUTTON      "Button1",IDC_BUTTON1,273,7,11,9
+    PUSHBUTTON      "Save(No Ecc)",IDC_BUTTON_SAVE_BIN,110,7,50,14
 END
 
 
