git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@45 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -77,20 +77,36 @@ IDR_MAINFRAME           ICON                    "res\\Ps2MemoryCard.ico"
 // Dialog
 //
 
-IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 435, 198
+IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 842, 319
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Ps2MemoryCard"
 FONT 9, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC,7,7,50,14
-    PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC,58,7,50,14
-    PUSHBUTTON      "导入PSU",IDC_BUTTON_IMPORT_PSU,259,7,50,14
-    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,24,421,167
-    PUSHBUTTON      "导出PSU",IDC_BUTTON_EXPORT_PSU,312,7,50,14
-    PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,378,7,50,14
+    PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC1,7,7,50,14
+    PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC1,7,24,50,14
+    PUSHBUTTON      "<<导入PSU",IDC_BUTTON_IMPORT_PSU1,422,24,50,14
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,43,413,269
+    PUSHBUTTON      "导出PSU>>",IDC_BUTTON_EXPORT_PSU1,370,24,50,14
+    PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,397,7,50,14
     PUSHBUTTON      "Button1",IDC_BUTTON1,364,7,11,9
-    PUSHBUTTON      "Save(No Ecc)",IDC_BUTTON_SAVE_BIN,110,7,50,14
+    PUSHBUTTON      "Save(No Ecc)",IDC_BUTTON_SAVE_BIN1,59,24,50,14
+    CONTROL         "",IDC_LIST2,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,422,43,413,269
+    EDITTEXT        IDC_EDIT1,111,7,253,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT2,523,7,253,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "New MC",IDC_BUTTON_CREATE_MC1,59,7,50,14
+    PUSHBUTTON      "选择 PSU目录",IDC_BUTTON_SEL_PSU_DIR,777,7,50,14
+END
+
+IDD_DIALOG_SEL_DIR DIALOGEX 0, 0, 234, 183
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Dialog"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "确定",IDOK,123,162,50,14
+    PUSHBUTTON      "取消",IDCANCEL,177,162,50,14
+    LISTBOX         IDC_LIST1,7,7,110,169,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "目录命名规则为:""MC_XYY""",IDC_STATIC1,122,7,105,81
 END
 
 
@@ -105,9 +121,17 @@ BEGIN
     IDD_PS2MEMORYCARD_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 428
+        RIGHTMARGIN, 835
         TOPMARGIN, 7
-        BOTTOMMARGIN, 191
+        BOTTOMMARGIN, 312
+    END
+
+    IDD_DIALOG_SEL_DIR, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 227
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 176
     END
 END
 #endif    // APSTUDIO_INVOKED
