git-svn-id: svn://www.wqsg-svn.com/svn_OpenWQSG/trunk@47 e26b5932-c06c-11de-ac5a-05e7513655e2

--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.vcproj
@@ -68,8 +68,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="zlib_MT.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(WQSG)"
+				AdditionalLibraryDirectories="&quot;$(WQSG)&quot;;zlib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -150,8 +151,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
+				AdditionalDependencies="zlib_MT.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(WQSG)"
+				AdditionalLibraryDirectories="&quot;$(WQSG)&quot;;zlib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
