--- a/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
+++ b/Ps2MemoryCard/Ps2MemoryCard/Ps2MemoryCard.rc
@@ -77,7 +77,7 @@ IDR_MAINFRAME           ICON                    "res\\Ps2MemoryCard.ico"
 // Dialog
 //
 
-IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 842, 319
+IDD_PS2MEMORYCARD_DIALOG DIALOGEX 0, 0, 843, 416
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_APPWINDOW
 CAPTION "Ps2MemoryCard"
@@ -86,16 +86,19 @@ BEGIN
     PUSHBUTTON      "Open MC",IDC_BUTTON_OPEN_MC1,7,7,50,14
     PUSHBUTTON      "Save MC",IDC_BUTTON_SAVE_MC1,7,24,50,14
     PUSHBUTTON      "<<导入PSU",IDC_BUTTON_IMPORT_PSU1,422,24,50,14
-    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,43,413,269
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,41,413,269
     PUSHBUTTON      "导出PSU>>",IDC_BUTTON_EXPORT_PSU1,370,24,50,14
-    PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,397,7,50,14
+    PUSHBUTTON      "关于软件",IDC_BUTTON_ABOUT,786,395,50,14
     PUSHBUTTON      "Button1",IDC_BUTTON1,364,7,11,9
     PUSHBUTTON      "Save(No Ecc)",IDC_BUTTON_SAVE_BIN1,59,24,50,14
-    CONTROL         "",IDC_LIST2,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,422,43,413,269
+    CONTROL         "",IDC_LIST2,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,423,41,413,269
     EDITTEXT        IDC_EDIT1,111,7,253,14,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_EDIT2,523,7,253,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT2,477,7,253,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "New MC",IDC_BUTTON_CREATE_MC1,59,7,50,14
-    PUSHBUTTON      "选择 PSU目录",IDC_BUTTON_SEL_PSU_DIR,777,7,50,14
+    PUSHBUTTON      "选择 PSU目录",IDC_BUTTON_SEL_PSU_DIR,731,7,50,14
+    EDITTEXT        IDC_EDIT_MC_INFO,111,24,253,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT_LOG,7,313,776,96,ES_MULTILINE | ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "清除日志",IDC_BUTTON_CLEAR_LOG,786,315,50,14
 END
 
 IDD_DIALOG_SEL_DIR DIALOGEX 0, 0, 234, 183
@@ -121,9 +124,9 @@ BEGIN
     IDD_PS2MEMORYCARD_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 835
+        RIGHTMARGIN, 836
         TOPMARGIN, 7
-        BOTTOMMARGIN, 312
+        BOTTOMMARGIN, 409
     END
 
     IDD_DIALOG_SEL_DIR, DIALOG
