使用更轻量的rapidxml rapidxml-1.13

--- a/WQSG 导出(导入)/WQSG 导出(导入)/WQSG 导出(导入).vcproj
+++ b/WQSG 导出(导入)/WQSG 导出(导入)/WQSG 导出(导入).vcproj
@@ -356,6 +356,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\xmlStorage.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\批量文本替换Dlg.cpp"
 				>
 			</File>
@@ -419,6 +423,10 @@
 			</File>
 			<File
 				RelativePath=".\WQSG_TXT_IO.h"
+				>
+			</File>
+			<File
+				RelativePath=".\xmlStorage.h"
 				>
 			</File>
 			<File
